<?xml version="1.0" encoding="UTF-8"?>
<resources>
    <string name="app_name">nguyen_van_s_application8</string>
    <string name="loading">Loading?</string>
    <string name="no_internet_connection">No internet connection!</string>
    <string name="lbl_logout">Logout</string>
    <string name="lbl_transections">Transections</string>
    <string name="lbl_message">Message</string>
    <string name="lbl_home">Home</string>
    <string name="lbl_100">100%</string>
    <string name="lbl_bdt">BDT</string>
    <string name="lbl_c_i_t">C?i ??t</string>
    <string name="lbl_others">Others</string>
    <string name="lbl_kho_h_ng">Kho h?ng</string>
    <string name="lbl_kh_ch_h_ng2"> Kh?ch h?ng</string>
    <string name="lbl_4_9_980">4.9 (980)</string>
    <string name="lbl_ph_n_h_i">Ph?n h?i</string>
    <string name="lbl_mota">Mota</string>
    <string name="lbl_edit">Edit</string>
    <string name="lbl_s_l_ng">s? l??ng</string>
    <string name="lbl_ms">MS</string>
    <string name="lbl_price">Price</string>
    <string name="lbl_name">Name</string>
    <string name="lbl_contact_admin">Contact Admin</string>
    <string name="lbl_bill_pay">Bill Pay</string>
    <string name="msg_available_balan">Available Balance</string>
    <string name="lbl_giamgia">Giamgia</string>
    <string name="msg_000015554775333">00001555477533345</string>
    <string name="lbl_e">E</string>
    <string name="lbl_n_h_y">Don huy</string>
    <string name="msg_last_transectio">Last Transection: 10 Nov, 2021:4.00pm</string>
    <string name="lbl_9_41_am">9:41 AM</string>
    <string name="msg_business_acc_pl">BUSINESS ACC PLATINUM</string>
    <string name="lbl_2_30_pm">2:30 PM</string>
    <string name="lbl_2">2</string>
    <string name="lbl_input">Input</string>
    <string name="lbl_qu_n_l_n">Qu?n l? ??n</string>
    <string name="lbl_services">Services</string>
    <string name="lbl_kh_ch_h_ng">Kh?ch h?ng</string>
    <string name="lbl_s_n_ph_m">S?n ph?m</string>
    <string name="lbl_n_th_nh_c_ng">Don thanh cong</string>
    <string name="lbl_transfers">Transfers</string>
    <string name="msg_d_paragon_bukit">D\u2019paragon bukit dieng</string>
    <string name="lbl_welcome">Welcome</string>
    <string name="msg_qu_n_l_n_h_n">Qu?n l? ??n h?ng</string>
    <string name="lbl_indexproduct">IndexProduct</string>
    <string name="lbl_active">Active</string>
    <string name="lbl_thong_tin">Thong tin</string>
    <string name="msg_h_th_ng_c_a_h">H? th?ng c?a h?ng</string>
    <string name="lbl_t_ng_ti_n">T?ng ti?n</string>
    <string name="lbl_11_000_00">11,000.00 </string>
    <string name="msg_qu_n_l_doanh_t">Qu?n l? doanh thu</string>
    <string name="msg_md_ashadulla_h">Md. Ashadulla Hil Galib</string>
    <string name="msg_last_login_14">Last login: 14 Nov, 2021:4.00pm</string>
    <string name="msg_this_contact_has_no_phone_nu">This contact has no phone number</string>
    <string name="msg_camera_storage_permission">This Application need permission\n1.Camera permission to capture the image.\n2.Storage Access permission to save the captured image.</string>
    <string name="lbl_camera">Camera</string>
    <string name="lbl_gallery">Gallery</string>
</resources>
