<?xml version="1.0" encoding="UTF-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable name="donthanhcongVM" type="com.nguyenvansapplication.app.modules.donthanhcong.data.viewmodel.DonthanhcongVM"/>
    </data>
    <LinearLayout android:id="@+id/linearDonThanhCong"
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:orientation="vertical" style="@style/groupStylewhite_1">
        <androidx.appcompat.widget.Toolbar
            android:gravity="center_horizontal"
            android:id="@+id/toolbarToolbar"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_4pxh"
            android:layout_width="match_parent" app:contentInsetStart="0dp">
            <FrameLayout android:id="@+id/frameStackvolume"
                android:layout_height="@dimen/_24pxv" android:layout_width="match_parent">
                <LinearLayout android:id="@+id/linearStatusbar"
                    android:layout_gravity="top|center"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/_10pxv"
                    android:layout_marginStart="@dimen/_7pxh"
                    android:layout_marginTop="@dimen/_1pxv"
                    android:layout_width="match_parent" android:orientation="horizontal">
                    <LinearLayout android:id="@+id/linearRowvolume"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_1pxv"
                        android:layout_weight="0.2"
                        android:layout_width="0dp" android:orientation="horizontal">
                        <ImageView android:id="@+id/imageVolume"
                            android:layout_height="@dimen/_9pxh"
                            android:layout_marginBottom="@dimen/_3pxv"
                            android:layout_marginTop="@dimen/_2pxv"
                            android:layout_width="@dimen/_14pxh"
                            android:scaleType="fitXY"
                            android:src="@drawable/img_volume"
                            tools:ignore="ContentDescription" tools:src="@drawable/img_volume"/>
                        <TextView android:ellipsize="end"
                            android:id="@+id/txtGS"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="@dimen/_4pxh"
                            android:layout_weight="0.41"
                            android:layout_width="0dp"
                            android:singleLine="true"
                            android:text="@{donthanhcongVM.donthanhcongModel.txtGS}"
                            style="@style/txtSFProTextregular12" tools:text="@string/lbl_ms"/>
                        <ImageView android:id="@+id/imageSignal"
                            android:layout_height="@dimen/_9pxh"
                            android:layout_marginBottom="@dimen/_3pxv"
                            android:layout_marginStart="@dimen/_1pxh"
                            android:layout_marginTop="@dimen/_3pxv"
                            android:layout_width="@dimen/_13pxh"
                            android:scaleType="fitXY"
                            android:src="@drawable/img_signal"
                            tools:ignore="ContentDescription" tools:src="@drawable/img_signal"/>
                    </LinearLayout>
                    <LinearLayout android:id="@+id/linearRowtime"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/_105pxh"
                        android:layout_weight="0.8"
                        android:layout_width="0dp" android:orientation="horizontal">
                        <TextView android:ellipsize="end"
                            android:id="@+id/txtTime"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="@dimen/_1pxv"
                            android:layout_weight="0.47"
                            android:layout_width="0dp"
                            android:singleLine="true"
                            android:text="@{donthanhcongVM.donthanhcongModel.txtTime}"
                            style="@style/txtSFProTextsemibold12" tools:text="@string/lbl_9_41_am"/>
                        <TextView android:ellipsize="end"
                            android:id="@+id/txtOneHundred"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="@dimen/_99pxh"
                            android:layout_marginTop="@dimen/_1pxv"
                            android:layout_weight="0.3"
                            android:layout_width="0dp"
                            android:singleLine="true"
                            android:text="@{donthanhcongVM.donthanhcongModel.txtOneHundred}"
                            style="@style/txtSFProTextregular12" tools:text="@string/lbl_100"/>
                        <ImageView android:id="@+id/imageComputer"
                            android:layout_height="@dimen/_10pxh"
                            android:layout_marginBottom="@dimen/_2pxv"
                            android:layout_marginStart="@dimen/_3pxh"
                            android:layout_marginTop="@dimen/_3pxv"
                            android:layout_width="@dimen/_24pxh"
                            android:scaleType="fitXY"
                            android:src="@drawable/img_computer"
                            tools:ignore="ContentDescription" tools:src="@drawable/img_computer"/>
                    </LinearLayout>
                </LinearLayout>
                <View android:background="@color/blue_A200"
                    android:id="@+id/viewRectangleThirty"
                    android:layout_gravity="center"
                    android:layout_height="@dimen/_24pxv"
                    android:layout_marginEnd="@dimen/_10pxh" android:layout_width="@dimen/_360pxh"/>
            </FrameLayout>
        </androidx.appcompat.widget.Toolbar>
        <ImageView android:id="@+id/imageSlide"
            android:layout_gravity="start"
            android:layout_height="@dimen/_25pxh"
            android:layout_marginEnd="@dimen/_15pxh"
            android:layout_marginStart="@dimen/_15pxh"
            android:layout_marginTop="@dimen/_11pxv"
            android:layout_width="@dimen/_30pxh"
            android:scaleType="fitXY" android:src="@drawable/img_slide"
            tools:ignore="ContentDescription" tools:src="@drawable/img_slide"/>
        <TextView android:ellipsize="end" android:id="@+id/txtQunlnhn"
            android:layout_gravity="start"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_24pxh"
            android:layout_marginStart="@dimen/_24pxh"
            android:layout_marginTop="@dimen/_30pxv"
            android:layout_width="wrap_content"
            android:singleLine="true"
            android:text="@{donthanhcongVM.donthanhcongModel.txtQunlnhn}"
            style="@style/txtRobotobold18" tools:text="@string/msg_qu_n_l_n_h_n"/>
        <TextView android:ellipsize="end" android:id="@+id/txtNthnhcng"
            android:layout_gravity="start"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_27pxh"
            android:layout_marginStart="@dimen/_27pxh"
            android:layout_marginTop="@dimen/_20pxv"
            android:layout_width="wrap_content"
            android:singleLine="true"
            android:text="@{donthanhcongVM.donthanhcongModel.txtNthnhcng}"
            style="@style/txtRobotobold18" tools:text="@string/lbl_n_th_nh_c_ng"/>
        <LinearLayout android:gravity="start"
            android:id="@+id/linearRowrectanglethirtytwo"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_14pxh"
            android:layout_marginStart="@dimen/_14pxh"
            android:layout_marginTop="@dimen/_18pxv"
            android:layout_width="match_parent"
            android:orientation="horizontal" style="@style/groupStylewhite_A700cornerRadius">
            <ImageView android:id="@+id/imageRectangleThirtyTwo"
                android:layout_height="@dimen/_129pxh"
                android:layout_marginBottom="@dimen/_8pxv"
                android:layout_marginStart="@dimen/_8pxh"
                android:layout_marginTop="@dimen/_8pxv"
                android:layout_width="@dimen/_120pxh"
                android:scaleType="fitXY" cornerRadius="@{@dimen/_4pxh}"
                imageRes="@{@drawable/img_rectangle32}"
                tools:ignore="ContentDescription" tools:src="@drawable/img_rectangle32"/>
            <LinearLayout android:gravity="start"
                android:id="@+id/linearColumndparagonbukit"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/_7pxv"
                android:layout_marginEnd="@dimen/_42pxh"
                android:layout_marginStart="@dimen/_16pxh"
                android:layout_marginTop="@dimen/_16pxv"
                android:layout_weight="0.54" android:layout_width="0dp" android:orientation="vertical">
                <TextView android:ellipsize="end"
                    android:id="@+id/txtDparagonbukit"
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent"
                    android:letterSpacing="0.01"
                    android:singleLine="true"
                    android:text="@{donthanhcongVM.donthanhcongModel.txtDparagonbukit}"
                    style="@style/txtRobotobold14" tools:text="@string/msg_d_paragon_bukit"/>
                <LinearLayout android:gravity="start"
                    android:id="@+id/linearRowratingbar"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/_10pxh"
                    android:layout_marginTop="@dimen/_6pxv"
                    android:layout_width="match_parent" android:orientation="horizontal">
                    <androidx.appcompat.widget.AppCompatRatingBar
                        android:id="@+id/ratingBarRatingbar"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="@dimen/_2pxv"
                        android:layout_width="wrap_content"
                        android:numStars="4"
                        android:progressBackgroundTint="@color/orange_400"
                        android:progressTint="@color/orange_400"
                        android:rating="4" style="@style/Widget.AppCompat.RatingBar.Small"/>
                    <FrameLayout android:id="@+id/frameStackstarseven"
                        android:layout_height="@dimen/_10pxv"
                        android:layout_marginBottom="@dimen/_2pxv" android:layout_width="@dimen/_10pxh">
                        <ImageView android:id="@+id/imageStarSeven"
                            android:layout_gravity="start"
                            android:layout_height="@dimen/_10pxh"
                            android:layout_width="@dimen/_10pxh"
                            android:scaleType="fitXY"
                            android:src="@drawable/img_star7_1"
                            tools:ignore="ContentDescription" tools:src="@drawable/img_star7_1"/>
                        <ImageView android:id="@+id/imageStarEight"
                            android:layout_gravity="top|end"
                            android:layout_height="@dimen/_9pxh"
                            android:layout_marginBottom="@dimen/_10pxv"
                            android:layout_marginEnd="@dimen/_1pxh"
                            android:layout_marginStart="@dimen/_10pxh"
                            android:layout_width="@dimen/_4pxh"
                            android:scaleType="fitXY"
                            android:src="@drawable/img_star8"
                            tools:ignore="ContentDescription" tools:src="@drawable/img_star8"/>
                    </FrameLayout>
                    <TextView android:ellipsize="end"
                        android:id="@+id/txt49980"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/_6pxh"
                        android:layout_marginTop="@dimen/_1pxv"
                        android:layout_width="wrap_content"
                        android:singleLine="true"
                        android:text="@{donthanhcongVM.donthanhcongModel.txt49980}"
                        style="@style/txtRobotoregular10" tools:text="@string/lbl_4_9_980"/>
                </LinearLayout>
                <LinearLayout android:gravity="start"
                    android:id="@+id/linearRowicons8bathtub"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/_10pxh"
                    android:layout_marginStart="@dimen/_4pxh"
                    android:layout_marginTop="@dimen/_7pxv"
                    android:layout_width="match_parent" android:orientation="horizontal">
                    <ImageView android:id="@+id/imageIcons8bathtub"
                        android:layout_height="@dimen/_10pxh"
                        android:layout_marginBottom="@dimen/_3pxv"
                        android:layout_marginTop="@dimen/_3pxv"
                        android:layout_width="@dimen/_10pxh"
                        android:scaleType="fitXY"
                        android:src="@drawable/img_icons8bathtub"
                        tools:ignore="ContentDescription" tools:src="@drawable/img_icons8bathtub"/>
                    <TextView android:ellipsize="end"
                        android:id="@+id/txtGroupTen"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/_1pxh"
                        android:layout_weight="0.51"
                        android:layout_width="0dp"
                        android:paddingBottom="@dimen/_1pxv"
                        android:paddingStart="@dimen/_3pxh"
                        android:paddingTop="@dimen/_2pxv"
                        android:singleLine="true"
                        android:text="@{donthanhcongVM.donthanhcongModel.txtGroupTen}"
                        style="@style/txtSolidRounded" tools:text="@string/lbl_giamgia"/>
                    <View
                        android:background="@drawable/rectangle_bg_gray_50_radius_8"
                        android:id="@+id/viewRectangleThirtyThree"
                        android:layout_height="@dimen/_16pxv"
                        android:layout_marginStart="@dimen/_8pxh" android:layout_width="@dimen/_45pxh"/>
                </LinearLayout>
                <TextView android:ellipsize="end"
                    android:id="@+id/txtIndexProduct"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/_10pxh"
                    android:layout_marginStart="@dimen/_5pxh"
                    android:layout_marginTop="@dimen/_2pxv"
                    android:layout_width="wrap_content"
                    android:singleLine="true"
                    android:text="@{donthanhcongVM.donthanhcongModel.txtIndexProduct}"
                    style="@style/txtRobotoregular10" tools:text="@string/lbl_indexproduct"/>
                <TextView android:ellipsize="end"
                    android:id="@+id/txtMota"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/_10pxh"
                    android:layout_marginStart="@dimen/_4pxh"
                    android:layout_marginTop="@dimen/_11pxv"
                    android:layout_width="wrap_content"
                    android:singleLine="true"
                    android:text="@{donthanhcongVM.donthanhcongModel.txtMota}"
                    style="@style/txtRobotoregular10" tools:text="@string/lbl_mota"/>
                <TextView android:ellipsize="end"
                    android:id="@+id/txtPrice"
                    android:layout_gravity="end"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/_48pxh"
                    android:layout_marginStart="@dimen/_48pxh"
                    android:layout_marginTop="@dimen/_6pxv"
                    android:layout_width="wrap_content"
                    android:singleLine="true"
                    android:text="@{donthanhcongVM.donthanhcongModel.txtPrice}"
                    style="@style/txtRobotomedium14" tools:text="@string/lbl_price"/>
            </LinearLayout>
        </LinearLayout>
        <View
            android:background="@drawable/rectangle_bg_gray_50_radius_8"
            android:id="@+id/viewRectangleThirtySeven"
            android:layout_gravity="end"
            android:layout_height="@dimen/_16pxv"
            android:layout_marginEnd="@dimen/_94pxh"
            android:layout_marginStart="@dimen/_94pxh"
            android:layout_marginTop="@dimen/_138pxv" android:layout_width="@dimen/_45pxh"/>
        <TextView android:ellipsize="end" android:id="@+id/txtTngtin"
            android:layout_gravity="end"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/_20pxv"
            android:layout_marginEnd="@dimen/_45pxh"
            android:layout_marginStart="@dimen/_45pxh"
            android:layout_marginTop="@dimen/_226pxv"
            android:layout_width="wrap_content"
            android:singleLine="true"
            android:text="@{donthanhcongVM.donthanhcongModel.txtTngtin}"
            style="@style/txtRobotomedium14" tools:text="@string/lbl_t_ng_ti_n"/>
    </LinearLayout>
</layout>
